Fix link overflow

--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 body {
-    background-color: #19191b;
     margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#app {
+    background-color: #19191b;
     padding: 10px;
     display: flex;
     flex-direction: column;
-    min-width: 400px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 400px;
 }
 
 #input-el {
@@ -71,6 +74,8 @@ body {
     color: white;
     text-decoration: none;
     margin-left: 10px;
+    width: 330px;
+    word-wrap: break-word;
 }
 
 #delete-item-btn {
